Added JavaPackager gradle tasks. See task createFinalAppBundle.