@@ -36,6 +36,58 @@ task dist(type: Jar) {
 
 dist.dependsOn classes
 
+def jdk = System.getProperty("java.home")
+def iconPath = "${project.projectDir}/logo.ico"
+
+// creates application bundle (executable + runtime)
+task javaPackager(type: Exec, dependsOn: dist) {
+
+    workingDir project.projectDir
+    commandLine = [
+        'javapackager',
+        '-deploy',
+        '-nosign',
+        "-Bicon=${iconPath}",
+        '-outdir', "${buildDir}/distribution",
+        '-srcdir', "${buildDir}/libs",
+        '-native', 'image',
+        '-name', project.appName,
+        '-appclass', project.mainClassName
+    ]
+}
+
+// removes bloated runtime created by javapackager
+task cleanPackagerRuntime(dependsOn: javaPackager) {
+    doLast() {
+        File runtimeFile = new File("${buildDir}/distribution/${project.appName}/runtime")
+        runtimeFile.deleteDir()
+        System.out.println("deleting bloated runtime in " + runtimeFile)
+    }
+}
+
+// creates a replacement runtime via jlink command (much smaller than jpackager)
+task createFinalAppBundle(type: Exec, dependsOn: [cleanPackagerRuntime]) {
+
+    workingDir project.projectDir
+    commandLine = [
+        'jlink',
+        '-p', "${jdk}/jmods",
+        '--add-modules', 'java.base,java.desktop,jdk.unsupported',
+        '--strip-debug',
+        '--no-header-files',
+        '--no-man-pages',
+        '--strip-native-commands',
+        "--vm=server",
+        "--compress=2",
+        '--output', "${buildDir}/distribution/${project.appName}/runtime"
+    ]
+
+    doLast{
+        System.out.println("Application '${project.name}' packaged.")
+        System.out.println(" -> location: ${buildDir}/distribution/${project.name}/")
+    }
+}
+
 eclipse {
     project {
         name = appName + "-desktop"
